--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,12 @@
-== README
+= Small example of Ruby on Rails 
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+http://www.ey-office.com/images/photo_sns_server.png
 
-Things you may want to cover:
+== This sample code includes
 
-* Ruby version
+* File upload by CarrierWave
+* User authentication by Devise
+* Twitter Boststarp
+* iOS application ( https://github.com/yuumi3/PhotoSnsApp ) interface
+* it can deploy to Heroku
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
