--- a/README.rdoc
+++ b/README.rdoc
@@ -9,4 +9,5 @@ http://www.ey-office.com/images/photo_sns_server.png
 * Twitter Boststarp
 * iOS application ( https://github.com/yuumi3/PhotoSnsApp ) interface
 * it can deploy to Heroku
+* RSpec Rails - Model specs
 
